--- a/practical1/pom.xml
+++ b/practical1/pom.xml
@@ -64,6 +64,16 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <systemProperties>
+              <property>
+                  <name>sparsity</name>
+                  <value>${sparsity}</value>
+              </property>
+              <property>
+                  <name>matrixType</name>
+                  <value>${matrixType}</value>
+              </property>
+          </systemProperties>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
         </configuration>
         <version>2.20.1</version>
